--- a/original.html
+++ b/original.html
@@ -41,39 +41,28 @@
             <div class="top-content">
                 <div class="text-content">
                     <h4>Features</h4>
-                    <p>Features content elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio,
-                        in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus
-                        scelerisque quis.</p>
+                    <p>Features content elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
                 </div>
                 <div class="text-content">
                     <h4>About</h4>
-                    <p>About content elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
-                        interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus
-                        scelerisque quis.</p>
+                    <p>About content elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
                 </div>
             </div>
 
-            <img class="middle-img" id="middle-img" src="img/mid-page-accent.jpg"
-                alt="Image of code snippets across the screen">
+            <img class="middle-img" id="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
             <div class="bottom-content">
                 <div class="text-content">
                     <h4>Services</h4>
-                    <p>Services content elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio,
-                        in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus
-                        scelerisque quis.</p>
+                    <p>Services content elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
                 </div>
                 <div class="text-content">
                     <h4>Product</h4>
-                    <p>Product content elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
-                        interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus
-                        scelerisque quis.</p>
+                    <p>Product content elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
                 </div>
                 <div class="text-content">
                     <h4>Vision</h4>
-                    <p>Vision content elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
-                        interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus
-                        scelerisque quis.</p>
+                    <p>Vision content elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
                 </div>
             </div>
 
@@ -83,8 +72,7 @@
 
             <h4>Contact</h4>
 
-            <p>123 Way 456 Street<br>
-                Somewhere, USA</p>
+            <p>123 Way 456 Street<br> Somewhere, USA</p>
 
             <p>1 (888) 888-8888</p>
 
@@ -96,7 +84,8 @@
             <p>Copyright Great Idea! 2018</p>
         </footer>
 
-    </div><!-- container ends -->
+    </div>
+    <!-- container ends -->
 </body>
 
 </html>
